# crazyswarm-iconlab

./: .gitignore
ros_ws/src/iconlab/: '  CMakeLists.txt  package.xml
ros_ws/src/iconlab/launch/: crazyflieTypes.yaml  crazyflies.yaml  hover_swarm.launch  hover_swarm_ilqr.launch
ros_ws/src/iconlab/launch/cfmult/: README.md  _cfmult.py
ros_ws/src/iconlab/scripts/: .run_experiment.py.swp  3d_gif_plotter.py  MPC-One-Quad_1.jl  Quadrotor_and_human.jl  Quadrotor_and_human.py  Quadrotor_and_humans.jl  Quadrotor_two_humans.jl  Quadrotor_two_humans.py  centralized_mpc.py  distributed_mpc.py  dmpc.py  iLQR_decentralized.py  multi_ilqr_Randy.py  plotter.py  run_experiment.py  run_experiment_2drones.py  simple_waypoints.py  single_ilqr_Randy.py  test.ipynb  util.py  waypoints_2.py
ros_ws/src/iconlab/scripts/RSS2022/: 3d_gif_plotter.py  MPC-One-Quad_1.jl  MPC_Implementation-3.jl  Quadrotor_and_humans.py  Waypoints_two_quad.csv  plotter.py  plotter_plotting_waypoints.py  run_experiment.py  run_experiment_2.py  run_experiment_2drones.py  two_quad.jl  two_quad.py
ros_ws/src/iconlab/scripts/experiment_data/: 012122-14:46:40-data.csv  012122-14:52:14-data.csv
ros_ws/src/iconlab/scripts/icon-demo/: README.md  UIUC.yaml  crazyswarm-demo.ipynb  icon.csv  icon_demo.py  icon_traj.py
ros_ws/src/iconlab/scripts/pycrazyswarm/: .crazyflie.py.swp  .crazyswarm_py.py.swp  .genericJoystick.py.swp  crazyflie.py  crazyflieSim.py  crazyswarm_py.py
ros_ws/src/iconlab/src/control_node/: control_node.cpp
ros_ws/src/iconlab/src/iLQR_node/: cost.h  cost_structure.cpp  cost_structure.h  iLQR.h  (+8 more)
(+16 files in other folders)
