<?xml version="1.0"?>
<package format="2">
  <name>iconlab</name>
  <version>0.0.0</version>
  <description>The iconlab package</description>

  <maintainer email="ayberkyaraneri@gmail.com">Ayberk Yaraneri</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/iconlab</url> -->

  <author email="ayberkyaraneri@gmail.com">Ayberk Yaraneri</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crazyswarm</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>crazyflie_cpp</build_depend>
  <build_depend>tf_conversion</build_depend>

  <exec_depend>crazyswarm</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>crazyflie_cpp</exec_depend>

</package>
